@@ -1,5 +1,5 @@
 package: PandoraFMS-Server
-Version: 3.1
+Version: 3.1.1
 Architecture: all
 Priority: optional
 Section: admin
