@@ -1,3 +1,8 @@
+2010-11-11  Sancho Lerena <slerena@artica.es>
+
+	* DEBIAN/control
+	DEBIAN/make_deb_package.sh: Updates on DEB packaging.
+
 2010-11-11  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/DB.pm
